# avc_classification

./: README.md
avc/: main.py  pyproject.toml  requirements.txt
avc/src/dataset/: dataset.py
avc/src/model/: model.py
avc/src/presentation_du_jeu_de_donnees/: presentation_du_jeu_de_donnees.py
